--- a/client/src/components/NavigationBar.css
+++ b/client/src/components/NavigationBar.css
@@ -1,12 +1,31 @@
 .navigation-bar {
-
-    height: 100px;
+    height: 80px;
     width: 100vw;
     display: flex;
     align-items: center;
+    justify-content: center;
     color: white;
     background-color: #142140;
     position: fixed;
     top: 0;
     left: 0;
+}
+
+.navigation-bar ul {
+    flex: 1;
+    list-style: none;   
+    text-align: center;
+    margin-top: 20px;
+}
+.navigation-bar ul li {
+    display: inline-block;
+    margin: 20px 0;
+    font-size: 20px;
+    padding: 0 80px;
+    cursor: pointer;
+    border-left: 1px solid white;
+}
+
+.navigation-bar ul li:last-child {
+    border-right: 1px solid white;
 }
