--- a/client/src/LoginPage.css
+++ b/client/src/LoginPage.css
@@ -1,7 +1,11 @@
 .login-page {
-  background-image: 
-    linear-gradient(to bottom, rgba(2, 14, 42, 1) 0%, rgba(15, 23, 42, 0.9) 50%, rgba(11, 33, 84, 0.5) 100%),
-    url('./assets/background.jpg');
+  background-image: linear-gradient(
+      to bottom,
+      rgba(2, 14, 42, 1) 0%,
+      rgba(15, 23, 42, 0.9) 50%,
+      rgba(11, 33, 84, 0.5) 100%
+    ),
+    url("./assets/background.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -29,7 +33,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(to bottom, rgba(18, 30, 51, 0.5) 0%, rgba(12, 31, 62, 0.5) 50%, rgba(19, 34, 60, 0.5) 100%);
+  background: linear-gradient(
+    to bottom,
+    rgba(18, 30, 51, 0.5) 0%,
+    rgba(12, 31, 62, 0.5) 50%,
+    rgba(19, 34, 60, 0.5) 100%
+  );
   backdrop-filter: blur(10px);
   border-radius: 10px;
   color: white;
@@ -79,6 +88,8 @@
 .remember-forgot {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  gap: 60px;
   width: 100%;
   font-size: 14.5px;
   margin-bottom: 25px;
@@ -104,7 +115,7 @@
   background: white;
   border: none;
   border-radius: 40px;
-  color: #13223C;
+  color: #13223c;
   cursor: pointer;
   font-size: 16px;
   font-weight: 500;
@@ -152,5 +163,5 @@
 }
 
 .register-link p a:hover {
-  text-decoration: underline; 
+  text-decoration: underline;
 }
