--- a/client/src/LoginPage.css
+++ b/client/src/LoginPage.css
@@ -69,7 +69,7 @@
   outline: none;
   border: 2px solid rgba(255, 255, 255, 0.2);
   border-radius: 20px;
-  padding: 0 20px;
+  padding: 0 45px 0 45px;
   color: white;
 }
 
@@ -79,10 +79,19 @@
 
 .input-box .icon {
   position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 16px;
+}
+
+.input-box .icon-toggle {
+  position: absolute;
   right: 20px;
   top: 50%;
   transform: translateY(-50%);
   font-size: 16px;
+  cursor: pointer;
 }
 
 .remember-forgot {
