--- a/client/src/RegisterPage.css
+++ b/client/src/RegisterPage.css
@@ -62,14 +62,14 @@
 }
 
 .input-box input {
-  width: 100%;
+  width: 300px;
   height: 100%;
   background: transparent;
   border: none;
   outline: none;
   border: 2px solid rgba(255, 255, 255, 0.2);
   border-radius: 20px;
-  padding: 0 95px;
+  padding: 0 10px;
   padding-left: 45px;
 
   color: white;
